2003-10-16  Pavel Roskin  <proski@gnu.org>

	* xdirentry.h: Move system includes to the files that need them.

	* xdirentry.h: Fix typos in field names.

	* xdirentry.h: Cleanup unused or write-only fields.  Adjust all
	dependencies.

	* xdirentry.h: Remove magic numbers.  Move some constants ...
	* ftpfs.c: ... here.

2003-10-15  Pavel Roskin  <proski@gnu.org>

	* samba/lib/doscalls.c: Remove.  Remove all references to it.

2003-10-14  Pavel Roskin  <proski@gnu.org>

	* vfs.h: Remove all references to seekdir and telldir.  Adjust
	all dependencies.

2003-10-13  Pavel Roskin  <proski@gnu.org>

	* vfs.c (_vfs_add_noncurrent_stamps): Fix incorrect casts.

2003-10-12  Pavel Roskin  <proski@gnu.org>

	* extfs.c: Switch to self-registration.
	* mcfs.c: Likewise.
	* sfs.c: Likewise.
	* smbfs.c: Likewise.
	* undelfs.c: Likewise.
	* vfs.s (_vfs_add_noncurrent_stamps): Temporary disable code
	that uses vfs_extfs_ops.
	(vfs_file_is_smb): Remove.

	* local.c: Switch to self-registration.
	* vfs.c: Cache localfs class for the use in vfs_get_class().

2003-10-11  Pavel Roskin  <proski@gnu.org>

	* xdirentry.h: Remove all typedefs, there is no need to hide the
	fact that structures are structures.  Fix all dependencies.

	* vfs.h: Remove typedef vfs, it's too ambiguous.  Massive
	changes to use struct vfs_class instead.

	* vfs.c (vfs_setup_wd): Initialize current_vfs here, not
	globally.
	(vfs_type_from_op): Rename to vfs_prefix_to_class(), avoid using
	vfs_local_fs.
	(vfs_strip_suffix_from_filename): Don't use vfs_local_fs.

	* vfs.h (ftpfs_hint_reread): Remove, it's unused.

	* vfs.c (vfs_add_noncurrent_stamps): Call vfs_rm_parents() at
	the end.  Change all callers not to call it.
	(vfs_rm_parents): Make static.

	* direntry.c: Don't use vfs_local_fs directly, use VFSF_LOCAL.
	* extfs.c: Likewise.
	* vfs.c (vfs_addstamp): Likewise.
	(vfs_init): Register vfs_local_fs like other classes.

	* direntry.c: Make more functions static.  They are filled in in